fixed responsive design on smaller screens

--- a/src/components/Layout/Disclaimer.module.css
+++ b/src/components/Layout/Disclaimer.module.css
@@ -56,12 +56,18 @@
 }
 
 @media only screen and (max-width: 550px) {
+  .modal {
+    overflow-x: none;
+  }
+  .modal__header h1 {
+    font-size: 2rem;
+  }
   .modal__content {
     font-size: 1.25rem;
-    width: 100%;
+    width: 80%;
   }
   .video__container {
     height: 25rem;
-    width: 40rem;
+    width: 35rem;
   }
 }
